--- a/.github/workflows/generate-github-profile-summary-cards.yml
+++ b/.github/workflows/generate-github-profile-summary-cards.yml
@@ -13,8 +13,8 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: vn7n24fzkq/github-profile-summary-cards@release
+      - uses: actions/checkout@v5
+      - uses: vn7n24fzkq/github-profile-summary-cards@main
         env:
           GITHUB_TOKEN: ${{ secrets.SUMMARY_GITHUB_TOKEN }}
         with:
