--- a/.github/workflows/generate-github-profile-summary-cards.yml
+++ b/.github/workflows/generate-github-profile-summary-cards.yml
@@ -1,22 +1,23 @@
 name: GitHub-Profile-Summary-Cards
 
 on:
-  schedule:
-    - cron: "0 0 * * *"
+  create:
+  push:
+  schedule: # execute every 24 hours
+    - cron: "* */24 * * *"
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: generate-github-profile-summary-cards
+    name: generate-github-cards
     permissions:
       contents: write
-
+      
     steps:
-      - uses: actions/checkout@v5
-      - uses: vn7n24fzkq/github-profile-summary-cards@main
+      - uses: actions/checkout@v2
+      - uses: vn7n24fzkq/github-profile-summary-cards@5055b27
         env:
-          GITHUB_TOKEN: ${{ secrets.SUMMARY_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           USERNAME: ${{ github.repository_owner }}
-          UTC_OFFSET: 9
